[package]
name = "lanMsg"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
# eframe = "0.31.1"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
encoding_rs = "0.8.35"

[dev-dependencies]
tempfile = "3.20.0"

# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.5", features = ["winnt"] }
